perf: Add lazy loading gif

--- a/index.html
+++ b/index.html
@@ -173,15 +173,15 @@
         </p>
         <div id="results-carousel" class="carousel2 results-carousel" style="display: flex; justify-content: center;">
           <div class="item item-steve" style="overflow: hidden;">
-            <img loading="lazy" src="./materials/video/video-brand.gif" alt="brand"
+            <img class="gif-loader" src="./materials/video/video-brand.gif" alt="brand"
               style="max-width: 100%; height: 200px; object-fit: cover; display: block; padding: 0;" />
           </div>
           <div class="item item-steve" style="overflow: hidden;">
-            <img loading="lazy" src="./materials/video/video-trevi.gif" alt="brand"
+            <img class="gif-loader" src="./materials/video/video-trevi.gif" alt="brand"
               style="max-width: 100%; height: 200px; object-fit: cover; display: block; padding: 0;" />
           </div>
           <div class="item item-steve" style="overflow: hidden;">
-            <img loading="lazy" src="./materials/video/video-sacre.gif" alt="brand"
+            <img class="gif-loader" src="./materials/video/video-sacre.gif" alt="brand"
               style="max-width: 120%; height: 200px; object-fit: cover; display: block; padding: 0;" />
           </div>
         </div>
@@ -217,7 +217,6 @@
     </div>
   </section>
 
-
   <section class="section">
     <div class="container is-max-desktop">
       <!-- Concurrent Work. -->
@@ -234,11 +233,6 @@
       <!--/ Concurrent Work. -->
     </div>
   </section>
-
-
-
-
-
 
   <section class="section">
     <div class="container is-max-desktop ">
@@ -257,7 +251,7 @@
                   <div id="example1" class="bal-container-small">
 
                     <div class="bal-after">
-                      <img loading="lazy" id="1-a" src="./materials/video/comp/brand-wegs-1.gif">
+                      <img id="1-a" class="gif-loader" data-src="./materials/video/comp/brand-wegs-1.gif">
                       <div class="bal-afterPosition afterLabel" style="z-index:1;">
                         Ours
                       </div>
@@ -265,7 +259,8 @@
 
                     <div class="bal-before" style="width:96.4968152866242%;">
                       <div class="bal-before-inset" style="width: 512px;">
-                        <img loading="lazy" id="1-b" src="./materials/video/comp/brand-cr-1.gif" alt="GIF Loop">
+                        <img id="1-b" class="gif-loader" data-src="./materials/video/comp/brand-cr-1.gif"
+                          alt="GIF Loop">
                         <div class="bal-beforePosition beforeLabel">
                           CR-NeRF [Yang 2023]
                         </div>
@@ -283,7 +278,7 @@
                   <div id="example2" class="bal-container-small">
 
                     <div class="bal-after">
-                      <img loading="lazy" id="2-a" src="./materials/video/comp/brand-wegs-2.gif">
+                      <img id="2-a" class="gif-loader" data-src="./materials/video/comp/brand-wegs-2.gif">
                       <div class="bal-afterPosition afterLabel">
                         Ours
                       </div>
@@ -291,7 +286,7 @@
 
                     <div class="bal-before" style="width: 50%;">
                       <div class="bal-before-inset" style="width: 512px;">
-                        <img loading="lazy" id="2-b" src="./materials/video/comp/brand-cr-2.gif">
+                        <img id="2-b" class="gif-loader" data-src="./materials/video/comp/brand-cr-2.gif">
                         <div class="bal-beforePosition beforeLabel">
                           CR-NeRF [Yang 2023]
                         </div>
@@ -308,7 +303,7 @@
                   <div id="example3" class="bal-container-small">
 
                     <div class="bal-after">
-                      <img loading="lazy" id="3-a" src="./materials/video/comp/brand-wegs-3.gif">
+                      <img id="3-a" class="gif-loader" data-src="./materials/video/comp/brand-wegs-3.gif">
                       <div class="bal-afterPosition afterLabel">
                         Ours
                       </div>
@@ -316,7 +311,7 @@
 
                     <div class="bal-before" style="width: 50%;">
                       <div class="bal-before-inset" style="width: 512px;">
-                        <img loading="lazy" id="3-b" src="./materials/video/comp/brand-ha-3.gif">
+                        <img id="3-b" class="gif-loader" data-src="./materials/video/comp/brand-ha-3.gif">
                         <div class="bal-beforePosition beforeLabel">
                           Ha-NeRF [Chen 2023]
                         </div>
@@ -333,7 +328,7 @@
                   <div id="example4" class="bal-container-small">
 
                     <div class="bal-after">
-                      <img loading="lazy" id="4-a" src="./materials/video/comp/brand-wegs-4.gif">
+                      <img id="4-a" class="gif-loader" data-src="./materials/video/comp/brand-wegs-4.gif">
                       <div class="bal-afterPosition afterLabel">
                         Ours
                       </div>
@@ -341,7 +336,7 @@
 
                     <div class="bal-before" style="width: 50%;">
                       <div class="bal-before-inset" style="width: 512px;">
-                        <img loading="lazy" id="4-b" src="./materials/video/comp/brand-ha-4.gif">
+                        <img id="4-b" class="gif-loader" data-src="./materials/video/comp/brand-ha-4.gif">
                         <div class="bal-beforePosition beforeLabel">
                           Ha-NeRF [Chen 2023]
                         </div>
@@ -370,7 +365,8 @@
                   <div id="example5" class="bal-container-small">
 
                     <div class="bal-after">
-                      <img loading="lazy" id="5-a" src="./materials/video/comp/sacre-wegs-2.gif">
+                      <img id="5-a" class="gif-loader"
+                        data-src="./materials/video/comp/sacre-wegs-2.gif">
                       <div class="bal-afterPosition afterLabel" style="z-index:1;">
                         Ours
                       </div>
@@ -378,7 +374,8 @@
 
                     <div class="bal-before" style="width:96.4968152866242%;">
                       <div class="bal-before-inset" style="width: 512px;">
-                        <img loading="lazy" id="5-b" src="./materials/video/comp/sacre-cr-2.gif" alt="GIF Loop">
+                        <img id="5-b" class="gif-loader" data-src="./materials/video/comp/sacre-cr-2.gif"
+                          alt="GIF Loop">
                         <div class="bal-beforePosition beforeLabel">
                           CR-NeRF [Yang 2023]
                         </div>
@@ -396,7 +393,8 @@
                   <div id="example6" class="bal-container-small">
 
                     <div class="bal-after">
-                      <img loading="lazy" id="6-a" src="./materials/video/comp/sacre-wegs-3.gif">
+                      <img id="6-a" class="gif-loader"
+                        data-src="./materials/video/comp/sacre-wegs-3.gif">
                       <div class="bal-afterPosition afterLabel" style="z-index:1;">
                         Ours
                       </div>
@@ -404,7 +402,8 @@
 
                     <div class="bal-before" style="width:96.4968152866242%;">
                       <div class="bal-before-inset" style="width: 512px;">
-                        <img loading="lazy" id="6-b" src="./materials/video/comp/sacre-cr-3.gif" alt="GIF Loop">
+                        <img id="6-b" class="gif-loader" data-src="./materials/video/comp/sacre-cr-3.gif"
+                          alt="GIF Loop">
                         <div class="bal-beforePosition beforeLabel">
                           CR-NeRF [Yang 2023]
                         </div>
@@ -422,7 +421,8 @@
                   <div id="example7" class="bal-container-small">
 
                     <div class="bal-after">
-                      <img loading="lazy" id="7-a" src="./materials/video/comp/sacre-wegs-1.gif">
+                      <img id="7-a" class="gif-loader"
+                        data-src="./materials/video/comp/sacre-wegs-1.gif">
                       <div class="bal-afterPosition afterLabel" style="z-index:1;">
                         Ours
                       </div>
@@ -430,7 +430,8 @@
 
                     <div class="bal-before" style="width:96.4968152866242%;">
                       <div class="bal-before-inset" style="width: 512px;">
-                        <img loading="lazy" id="7-b" src="./materials/video/comp/sacre-ha-1.gif" alt="GIF Loop">
+                        <img id="7-b" class="gif-loader" data-src="./materials/video/comp/sacre-ha-1.gif"
+                          alt="GIF Loop">
                         <div class="bal-beforePosition beforeLabel">
                           Ha-NeRF [Chen 2023]
                         </div>
@@ -448,7 +449,8 @@
                   <div id="example8" class="bal-container-small">
 
                     <div class="bal-after">
-                      <img loading="lazy" id="8-a" src="./materials/video/comp/sacre-wegs-4.gif">
+                      <img id="8-a" class="gif-loader"
+                        data-src="./materials/video/comp/sacre-wegs-4.gif">
                       <div class="bal-afterPosition afterLabel" style="z-index:1;">
                         Ours
                       </div>
@@ -456,7 +458,8 @@
 
                     <div class="bal-before" style="width:96.4968152866242%;">
                       <div class="bal-before-inset" style="width: 512px;">
-                        <img loading="lazy" id="8-b" src="./materials/video/comp/sacre-ha-4.gif" alt="GIF Loop">
+                        <img id="8-b" class="gif-loader" data-src="./materials/video/comp/sacre-ha-4.gif"
+                          alt="GIF Loop">
                         <div class="bal-beforePosition beforeLabel">
                           Ha-NeRF [Chen 2023]
                         </div>
@@ -484,7 +487,7 @@
                 <div id="example9" class="bal-container-small">
 
                   <div class="bal-after">
-                    <img loading="lazy" id="9-a" src="./materials/video/comp/trevi-wegs-2.gif">
+                    <img id="9-a" class="gif-loader" data-src="./materials/video/comp/trevi-wegs-2.gif">
                     <div class="bal-afterPosition afterLabel" style="z-index:1;">
                       Ours
                     </div>
@@ -492,7 +495,7 @@
 
                   <div class="bal-before" style="width:96.4968152866242%;">
                     <div class="bal-before-inset" style="width: 512px;">
-                      <img loading="lazy" id="9-b" src="./materials/video/comp/trevi-cr-2.gif" alt="GIF Loop">
+                      <img id="9-b" class="gif-loader" data-src="./materials/video/comp/trevi-cr-2.gif" alt="GIF Loop">
                       <div class="bal-beforePosition beforeLabel">
                         CR-NeRF [Yang 2023]
                       </div>
@@ -510,7 +513,7 @@
                 <div id="example10" class="bal-container-small">
 
                   <div class="bal-after">
-                    <img loading="lazy" id="10-a" src="./materials/video/comp/trevi-wegs-4.gif">
+                    <img id="10-a" class="gif-loader" data-src="./materials/video/comp/trevi-wegs-4.gif">
                     <div class="bal-afterPosition afterLabel" style="z-index:1;">
                       Ours
                     </div>
@@ -518,7 +521,7 @@
 
                   <div class="bal-before" style="width:96.4968152866242%;">
                     <div class="bal-before-inset" style="width: 512px;">
-                      <img loading="lazy" id="10-b" src="./materials/video/comp/trevi-cr-4.gif" alt="GIF Loop">
+                      <img id="10-b" class="gif-loader" data-src="./materials/video/comp/trevi-cr-4.gif" alt="GIF Loop">
                       <div class="bal-beforePosition beforeLabel">
                         CR-NeRF [Yang 2023]
                       </div>
@@ -536,7 +539,7 @@
                 <div id="example11" class="bal-container-small">
 
                   <div class="bal-after">
-                    <img loading="lazy" id="11-a" src="./materials/video/comp/trevi-wegs-1.gif">
+                    <img id="11-a" class="gif-loader" data-src="./materials/video/comp/trevi-wegs-1.gif">
                     <div class="bal-afterPosition afterLabel" style="z-index:1;">
                       Ours
                     </div>
@@ -544,7 +547,7 @@
 
                   <div class="bal-before" style="width:96.4968152866242%;">
                     <div class="bal-before-inset" style="width: 512px;">
-                      <img loading="lazy" id="11-b" src="./materials/video/comp/trevi-ha-1.gif" alt="GIF Loop">
+                      <img id="11-b" class="gif-loader" data-src="./materials/video/comp/trevi-ha-1.gif" alt="GIF Loop">
                       <div class="bal-beforePosition beforeLabel">
                         Ha-NeRF [Chen 2023]
                       </div>
@@ -565,7 +568,7 @@
                 <div id="example12" class="bal-container-small">
 
                   <div class="bal-after">
-                    <img loading="lazy" id="12-a" src="./materials/video/comp/trevi-wegs-3.gif">
+                    <img id="12-a" class="gif-loader" data-src="./materials/video/comp/trevi-wegs-3.gif">
                     <div class="bal-afterPosition afterLabel" style="z-index:1;">
                       Ours
                     </div>
@@ -573,7 +576,7 @@
 
                   <div class="bal-before" style="width:96.4968152866242%;">
                     <div class="bal-before-inset" style="width: 512px;">
-                      <img loading="lazy" id="12-b" src="./materials/video/comp/trevi-ha-3.gif" alt="GIF Loop">
+                      <img id="12-b" class="gif-loader" data-src="./materials/video/comp/trevi-ha-3.gif" alt="GIF Loop">
                       <div class="bal-beforePosition beforeLabel">
                         Ha-NeRF [Chen 2023]
                       </div>
@@ -600,49 +603,6 @@
 
     </div>
   </section>
-
-  <script>
-    // 创建 BeforeAfter 实例并在 GIF 图片加载完成后开始播放
-    function createBeforeAfterWithGifs(id, gifAId, gifBId) {
-      const beforeAfter = new BeforeAfter({ id: id });
-
-      // 获取 GIF 图片元素
-      const gifA = document.getElementById(gifAId);
-      const gifB = document.getElementById(gifBId);
-
-      // 计数器，用于记录 GIF 图片加载完成的数量
-      let loadedCount = 0;
-
-      // 加载完成回调函数
-      function handleLoad() {
-        // 每次加载完成计数器加1
-        loadedCount++;
-        // 如果两个 GIF 图片都加载完成，则开始播放
-        if (loadedCount === 2) {
-          // beforeAfter.play();
-        }
-      }
-
-      // 为每个 GIF 图片添加加载完成事件监听器
-      gifA.addEventListener('load', handleLoad);
-      gifB.addEventListener('load', handleLoad);
-    }
-
-    // 创建 BeforeAfter 实例并处理 GIF 图片
-    createBeforeAfterWithGifs('#example1', '1-a', '1-b');
-    createBeforeAfterWithGifs('#example2', '2-a', '2-b');
-    createBeforeAfterWithGifs('#example3', '3-a', '3-b');
-    createBeforeAfterWithGifs('#example4', '4-a', '4-b');
-    createBeforeAfterWithGifs('#example5', '5-a', '5-b');
-    createBeforeAfterWithGifs('#example6', '6-a', '6-b');
-    createBeforeAfterWithGifs('#example7', '7-a', '7-b');
-    createBeforeAfterWithGifs('#example8', '8-a', '8-b');
-    createBeforeAfterWithGifs('#example9', '9-a', '9-b');
-    createBeforeAfterWithGifs('#example10', '10-a', '10-b');
-    createBeforeAfterWithGifs('#example11', '11-a', '11-b');
-    createBeforeAfterWithGifs('#example12', '12-a', '12-b');
-  </script>
-
 
   <!-- <section class="section">
     <div class="container is-max-desktop">
@@ -761,13 +721,13 @@
 
           <!-- 第一行 -->
           <div style="display: flex;">
-            <video width="350" controls autoplay loop>
+            <video width="350"  autoplay loop>
               <source src="./materials/video/interpolation/sacre/1.mp4" type="video/mp4">
             </video>
-            <video width="350" controls autoplay loop>
+            <video width="350"  autoplay loop>
               <source src="./materials/video/interpolation/sacre/2.mp4" type="video/mp4">
             </video>
-            <video width="350" controls autoplay loop>
+            <video width="350"  autoplay loop>
               <source src="./materials/video/interpolation/sacre/3.mp4" type="video/mp4">
             </video>
           </div>
