--- a/index.html
+++ b/index.html
@@ -182,7 +182,20 @@
         <!--/ Concurrent Work. -->
     </div>
 </section>
+<div class="has-text-centered">
+        <h2 class="title is-3">Video</h2>
+        
 
+        <!-- The following is the way to insert through link -->
+        <div class="publication-video">
+          <iframe width="560" height="315" src="https://www.youtube.com/watch?v=rIbo61JqfJI"
+            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+         encrypted-media; " allowfullscreen></iframe> 
+
+                <p>
+                    For the interactive visual comparison below, loading a large number of videos may take some time and resources. You can choose to balance this by watching the supplementary video.
+                </p>
+      </div>
 
 
 
@@ -192,10 +205,7 @@
         <div class=" has-text-centered">
             <h2 class="title is-3">Visual Comparisons</h2>
             <div class="content has-text-justified">
-                <p>
 
-                    For the interactive visual comparison below, loading a large number of videos may take some time and resources. You can choose to balance this by watching the supplementary video.
-                </p>
             </div>
             <div class="columns is-centered">
                 <!-- Visual Effects. -->
