--- a/index.html
+++ b/index.html
@@ -186,11 +186,13 @@
         <h2 class="title is-3">Video</h2>
         
 
-        <!-- The following is the way to insert through link -->
+
+
+        </div>
         <div class="publication-video">
-          <iframe width="560" height="315" src="https://www.youtube.com/watch?v=rIbo61JqfJI"
-            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
-         encrypted-media; " allowfullscreen></iframe> 
+          <iframe src="https://www.youtube.com/embed/rIbo61JqfJI?si=pn6__Vzw_KDP_D84" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+        </div>
+      </div>
 
                 <p>
                     For the interactive visual comparison below, loading a large number of videos may take some time and resources. You can choose to balance this by watching the supplementary video.
