--- a/index.html
+++ b/index.html
@@ -182,22 +182,29 @@
         <!--/ Concurrent Work. -->
     </div>
 </section>
-<div class="has-text-centered">
-        <h2 class="title is-3">Video</h2>
-        
 
 
+<section class="section">
+    <div class="container is-max-desktop">
+        <!-- Concurrent Work. -->
+        <div class="columns is-centered has-text-centered">
+            <div class="column is-full-width">
+                <h2 class="title is-3">Video</h2>
+                <div class="content has-text-justified">
+                    <div class="publication-video">
+                        <iframe src="https://www.youtube.com/embed/rIbo61JqfJI?si=pn6__Vzw_KDP_D84" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                    </div>
 
+                    <p>
+                        For the interactive visual comparison below, loading a large number of videos may take some time and resources. You can choose to balance this by watching the supplementary video.
+                    </p>
+                </div>
+
+            </div>
         </div>
-        <div class="publication-video">
-          <iframe src="https://www.youtube.com/embed/rIbo61JqfJI?si=pn6__Vzw_KDP_D84" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
-        </div>
-      </div>
-
-                <p>
-                    For the interactive visual comparison below, loading a large number of videos may take some time and resources. You can choose to balance this by watching the supplementary video.
-                </p>
-      </div>
+        <!--/ Concurrent Work. -->
+    </div>
+</section>
 
 
 
