--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
 </body>
 </html>
 
-<section class="section">
+<!--<section class="section">
     <div class="container is-max-desktop">
         <div class="columns is-centered has-text-centered">
             <div class="column is-full-width">
@@ -760,7 +760,7 @@
         </div>
     </div>
 </section>
-
+-->
 
 <!-- TODO: update the arxiv link and github -->
 <footer class="footer">
